// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Amp experiment container on Amp pages should render an amp-experiment with the expected config 1`] = `
<div>
  <amp-experiment>
    <script
      type="application/json"
    >
      {"someExperiment":{"variants":{"control":33,"variant_1":33,"variant_2":33}}}
    </script>
  </amp-experiment>
</div>
`;

exports[`Amp experiment container on Amp pages should render an amp-experiment with the expected config when multiple experiments are running at the same time 1`] = `
<div>
  <amp-experiment>
    <script
      type="application/json"
    >
      {"aExperiment":{"variants":{"control":33,"variant_1":33,"variant_2":33}},"bExperiment":{"variants":{"control":33,"variant_1":33,"variant_2":33}}}
    </script>
  </amp-experiment>
</div>
`;
